# vpc-shift-tool

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  TECHNICAL.md
.github/workflows/: makefile.yml
src/: about.rs  config.rs  device.rs  hid_worker.rs  lib.rs  main.rs  state.rs  ui.rs  util.rs
tests/: basic_tests.rs
udev/rules.d/: 99-vpc.rules
