[package]
name = "shift_tool"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shift_tool"
path = "src/main.rs"

[lib]
name = "vpc_shift_tool"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.30.0"
env_logger = "0.11.3"
fast_config = { version = "1.1.3", features = ["json5"] }
hidapi = "2.6.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
dirs = { version = "6.0.0", features = [] }
chrono = "0.4.40"


[features]
logging = []

default = ["logging"]

[dev-dependencies]
mock-it = "0.9.0"
